# pkg/models/user.go
@@ -13,6 +13,11 @@ type User struct {
 	Email              string          `gorm:"uniqueIndex;not null" json:"email"`
 	PasswordHash       string          `gorm:"" json:"-"` // Stored hashed, not exposed via JSON - not required for social logins
 	EmailVerified      bool            `gorm:"default:false" json:"email_verified"`
+	Name               string          `gorm:"" json:"name"`            // Full name from social login or user input
+	FirstName          string          `gorm:"" json:"first_name"`      // First name from social login
+	LastName           string          `gorm:"" json:"last_name"`       // Last name from social login
+	ProfilePicture     string          `gorm:"" json:"profile_picture"` // Profile picture URL from social login
+	Locale             string          `gorm:"" json:"locale"`          // User's locale/language preference
 	TwoFAEnabled       bool            `gorm:"default:false" json:"two_fa_enabled"`
 	TwoFASecret        string          `gorm:"" json:"-"`           // Stored encrypted, not exposed via JSON
 	TwoFARecoveryCodes datatypes.JSON  `gorm:"type:jsonb" json:"-"` // Stored encrypted, not exposed via JSON
